updated for sonarqube